# orchestro

./: .env.example  .gitignore  COMMERCIAL-LICENSE.md  LICENSE  Makefile  ORCHESTRO.md  README.md  facts.md  pyproject.toml
benchmarks/: agent.json  coding.json  default.json  routing.json  vllm-live.json  workflows.json
constitutions/: coding.md  data.md  devops.md  research.md  writing.md
deploy/container/: Dockerfile  README.md
deploy/systemd/: orchestro.service
deploy/vllm/: README.md
deploy/vllm/k8s/: vllm-rdna4-template.yaml
docs/: adr-agent-loop-patterns.md  adr-sqlite-first.md  api-operations.md  api-reference.md  architecture.md  backends-and-routing.md  benchmarks.md  borrowed-patterns.md  cli-reference.md  collections.md  database-schema-sql.md  database-schema.md  deployment.md  documentation-gaps.md  examples.md  getting-started.md  global.md.example  instructions-and-constitutions.md  lsp.md  mcp.md  plugins.md  roadmap.md  shell.md  testing-and-operations.md  troubleshooting.md  trust-and-security.md  tui-plan.md  tui.md
scripts/: launch_tui_first_time.sh  ollama-ephemeral.sh  ollama-port-forward.sh  orchestro_canary.py  reindex-ollama-embeddings.sh  render-vllm-rdna4-manifest.sh  seed-interactions.py  vllm-ephemeral-check.sh  vllm-port-forward.sh  vllm-smoke.sh
src/orchestro/: __init__.py  api.py  approvals.py  backend_profiles.py  bash_analysis.py  bench.py  budget.py  cli.py  collections.py  commands.py  compaction.py  constitutions.py  correction_aware.py  db.py  embeddings.py  escalation.py  facts_file.py  git_changes.py  instructions.py  job_states.py  lsp_client.py  mcp_client.py  mcp_server.py  models.py  orchestrator.py  paths.py  planner.py  plugins.py  policies.py  quality.py  recovery.py  retrieval.py  routing.py  scheduler.py  tasks.py  tools.py  training_export.py  trust.py  tui.py  verifiers.py
src/orchestro/backends/: __init__.py  agent_cli.py  anthropic.py  base.py  mock.py  openai_compat.py  subprocess_command.py
tests/: conftest.py  test_agent_cli_backend.py  test_anthropic.py  test_api.py  test_api_acceptance.py  test_approvals.py  test_backend_profiles.py  test_bash_analysis.py  test_bench.py  test_budget.py  test_cli.py  test_cli_acceptance.py  test_collections.py  test_collections_db.py  test_commands.py  test_compaction.py  test_constitution_propagation.py  test_constitutions.py  test_correction_aware.py  test_db.py  test_embeddings.py  test_escalation.py  test_fact_review.py  test_facts_file.py  test_git_changes.py  test_instructions.py  test_job_states.py  test_live_backends.py  test_lsp_client.py  test_mcp_client.py  test_mcp_server.py  test_models.py  test_new_tools.py  test_new_verifiers.py  test_openai_compat.py  test_orchestrator.py  test_paths.py  test_planner.py  test_plugins.py  test_policies.py  (+16 more)
