[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestro"
version = "0.1.0"
description = "Local-first orchestration harness for personal AI systems."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "keith", email = "keith@snape.tech"},
]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.0.0",
  "sqlite-vec>=0.1.9",
  "uvicorn>=0.30.0",
]

[project.scripts]
orchestro = "orchestro.cli:main"
orchestro-mcp = "orchestro.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
